fix overflowing image previews on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -38,6 +38,7 @@
   span.project-preview {
     box-sizing: border-box;
     height: 100%;
+    overflow: hidden;
 
     p {
       display: inline;
